# tracel-cli

./: Cargo.toml  README.md  run-checks.sh
.github/workflows/: publish.yml
crates/burn-central-cli/: Cargo.toml
crates/burn-central-cli/src/: app_config.rs  cli.rs  context.rs  logging.rs
crates/burn-central-cli/src/commands/: init.rs  login.rs  mod.rs  package.rs  training.rs  unlink.rs
crates/burn-central-cli/src/helpers/: project.rs
crates/burn-central-cli/src/tools/: build_driver.rs  git.rs  linker.rs  mod.rs  packager.rs  project_context.rs  target.rs  terminal.rs
crates/burn-central-workspace/: Cargo.toml  README.md
crates/burn-central-workspace/src/: lib.rs
crates/burn-central-workspace/src/compute_provider/: mod.rs
crates/burn-central-workspace/src/entity/projects/: mod.rs  tracel_project.rs
crates/burn-central-workspace/src/entity/projects/burn_dir/: mod.rs  project.rs
crates/burn-central-workspace/src/execution/: local.rs  mod.rs
crates/burn-central-workspace/src/generation/: mod.rs
crates/burn-central-workspace/src/generation/crate_gen/: cargo_toml.rs  mod.rs
crates/burn-central-workspace/src/tools/: function_discovery.rs  git.rs  mod.rs
crates/burn-central-workspace/src/tools/cargo/: mod.rs  package.rs
crates/tracel-cli/: Cargo.toml  template.gitignore
crates/tracel-cli/src/: app_config.rs  cli.rs  lib.rs  logging.rs
crates/tracel-cli/src/commands/: init.rs  login.rs  me.rs  mod.rs  package.rs  project.rs  training.rs  unlink.rs
crates/tracel-cli/src/helpers/: project.rs
crates/tracel-cli/src/tools/: build_driver.rs  cargo.rs  event.rs  mod.rs  packager.rs  project_context.rs  terminal.rs  workspace.rs
