[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
version = "0.4.2"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
authors = ["Tracel Technologies Inc."]
repository = "https://github.com/tracel-ai/burn-central-cli"
keywords = ["tracel", "burn-central", "burn", "cli"]
categories = ["command-line-interface", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.98"
toml = "0.8.22"
clap = { version = "4.5.39", features = ["derive", "cargo"] }
colored = "3.0.0"
derive-new = { version = "0.7.0", default-features = false }
tracing = "0.1.44"
once_cell = "1.21.3"
proc-macro2 = { version = "1.0.95" }
quote = "1.0.40"
regex = "1.11.1"
serde = { version = "1.0.224", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
syn-serde = { version = "0.3.1", features = ["json"] }
sha2 = { version = "0.10.9" }
syn = { version = "2.0.101", features = ["extra-traits", "full"] }
thiserror = "2.0.12"
env_logger = "0.11.8"
console = "0.15.8"
cliclack = "0.3.6"
directories = "5.0"
url = "2.5.4"
toml_edit = "0.22.26"
prettyplease = "0.2.33"
cargo_metadata = { version = "0.20.0", features = ["builder"] }
cargo-util-schemas = "0.8.1"
flate2 = { version = "1.1.1", default-features = false, features = ["zlib"] }
tar = { version = "0.4.44", default-features = false }
walkdir = "2"
ignore = "0.4.23"
gix = { version = "0.77.0", default-features = false, features = ["dirwalk", "status"]}
unicase = "2.8.1"
lazycell = "1.3.0"
serde-untagged = "0.1.7"
serde_ignored = "0.1.12"
pathdiff = "0.2.3"
chrono = "0.4.42"
strum = {version = "0.27.2", features = ["derive"]}


## External Crate
burn-central-client = "0.6.3"

## Crate
burn-central-workspace = { version = "0.4.2", path = "crates/burn-central-workspace" }
burn-central-cli = { version = "0.4.2", path = "crates/burn-central-cli" }

### For xtask crate ###
tracel-xtask = { version = "4.5.0" }

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
