[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask"]

[workspace.package]
edition = "2024"
version = "0.5.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
rust-version = "1.87.0"
authors = ["Tracel Technologies Inc."]
repository = "https://github.com/tracel-ai/burn-central-cli"
keywords = ["tracel", "burn-central", "burn", "cli"]
categories = ["command-line-interface", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.103"
toml = "0.8.23"
toml_edit = "0.22.27"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
colored = "3.1.1"
derive-new = { version = "0.7.0", default-features = false }
tracing = "0.1.44"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.10.9" }
thiserror = "2.0.18"
env_logger = "0.11.11"
console = "0.15.11"
cliclack = "0.3.8"
directories = "5.0"
url = "2.5.8"
cargo_metadata = { version = "0.20.0", features = ["builder"] }
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
tar = { version = "0.4.46", default-features = false }
walkdir = "2"
ignore = "0.4.26"
gix = { version = "0.77.0", default-features = false, features = ["dirwalk", "status"]}
chrono = "0.4.45"
strum = {version = "0.27.2", features = ["derive"]}


## External Crate
tracel-client = "0.8.0"
# tracel-client  = { path = "../client/tracel-client" }

## Crate
burn-central-cli = { version = "0.5.0", path = "crates/burn-central-cli" }

### For xtask crate ###
tracel-xtask = { version = "4.19.0" }

[profile.dev]
debug = 0 # Speed up compilation time and not necessary.
