[package]
name = "burn-central-cli"
description = "Burn Central CLI"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "burn"
path = "src/bin/burn.rs"

[dependencies]
burn-central-workspace.workspace = true
burn-central-client.workspace = true

anyhow.workspace = true
clap.workspace = true
colored.workspace = true
console.workspace = true
cliclack.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
