[package]
name = "tracel-cli"
description = "Tracel CLI"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "burn"
path = "src/bin/burn.rs"

[dependencies]
tracel-client.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
console.workspace = true
cliclack.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml_edit.workspace = true
url.workspace = true
toml.workspace = true
gix.workspace = true
tracing.workspace = true
cargo_metadata.workspace = true
ignore.workspace = true
flate2.workspace = true
tar.workspace = true
walkdir.workspace = true
