[package]
name = "burn-central-workspace"
description = "Burn Central CLI core library"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
derive-new.workspace = true
colored.workspace = true
chrono.workspace = true
sha2.workspace = true
cargo_metadata.workspace = true
flate2.workspace = true
tar.workspace = true
walkdir.workspace = true
ignore.workspace = true
gix.workspace = true
tracing.workspace = true

[dev-dependencies]
env_logger.workspace = true

[features]
default = []
